text align fix

--- a/css/main.css
+++ b/css/main.css
@@ -83,5 +83,6 @@ footer {
 @media  (max-width: 800px) {
     .main-container {
         width: 90%;
+        text-align: right;
     }
 }
